fix: refine Medallion pipeline and restore schema compatibility
- Schema: Restored all missing legacy columns and tables to ensure JacksonEventParser and MyBatis compatibility.
- Bronze: Fixed SQL truncation issue by switching to SOH delimiter and implemented parameterized queries.
- Silver: Refined aggregation logic to roll up metrics from Tasks to Stages and implemented Java 21 Text Blocks for SQL.
- Gold: Fixed percentile function and implemented robust multi-dimensional scoring (Skew, GC).